[project]
name = "modal-convert"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.69.0",
    "fastapi[standard]>=0.115.0",
    "requests>=2.32.0",
    "rs-common-interfaces-py>=0.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
